--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="bg-darkblue p-4">
+<div class="bg-darkblue px-10 py-4">
   <div class="text-white">
     <img src="assets/logo.svg" />
   </div>
