add-user-service

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,8 @@
-<div class="bg-navbar px-10 py-4">
-  <div class="text-white">
+<div class="flex bg-navbar px-10 py-4">
+  <div class="flex-1 text-white">
     <img src="assets/logo.svg" />
+  </div>
+  <div class="justify-end">
+    <app-profile></app-profile>
   </div>
 </div>
