--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="px-10 py-4">
   <div class="text-white">
-    <img src="assets/logo.svg" />
+    <p>{{ currentUser.name }}</p>
   </div>
 </div>
