--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="flex bg-navbar px-10 py-4">
+<div class="flex items-center h-20 bg-navbar px-10">
   <div class="flex-1 text-white">
     <img src="assets/logo.svg" />
   </div>
