--- a/src/app/pages/video-detail/video-detail.component.html
+++ b/src/app/pages/video-detail/video-detail.component.html
@@ -1,1 +1,22 @@
-<p>video-detail works!</p>
+<div class="pt-14 px-11 lg:px-24 xl:px-80 flex flex-col">
+  <h1 class="items-center text-2xl font-bold">video-detail works!</h1>
+  <video [src]="videoUrl" controls class="pt-6 w-full"></video>
+
+  <div class="pt-4 flex flex-row gap-4">
+    <app-reaction-button
+      label="Snapshot"
+      icon="assets/camera-icon.svg"
+      class="flex"
+    ></app-reaction-button>
+    <app-reaction-button
+      label="Star"
+      icon="assets/star-icon.svg"
+      class="flex-1"
+    ></app-reaction-button>
+    <app-reaction-button
+      label="Star"
+      icon="assets/star-icon.svg"
+      class="justify-end"
+    ></app-reaction-button>
+  </div>
+</div>
