--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,6 @@
-<div class="px-10 py-4">
-  <div class="text-white">
+<div class="py-4 flex flex-row">
+  <img [src]="currentUser.pictureUrl" class="w-8 h-8 rounded-full" />
+  <div class="pl-3 flex items-center text-white">
     <p>{{ currentUser.name }}</p>
   </div>
 </div>
