--- a/src/app/components/buttons/reaction-button/reaction-button.component.html
+++ b/src/app/components/buttons/reaction-button/reaction-button.component.html
@@ -1,5 +1,5 @@
 <button
-  class="py-2 pl-3 pr-4 border-2 border-solid border-border hover:border-title rounded-lg inline-flex items-center"
+  class="py-2 my-1 px-3 border-2 border-solid border-border hover:border-title rounded-lg inline-flex items-center"
 >
   <img [src]="icon" class="mr-2 w-7 h-7" />
   {{ label }}
