add-videoPreviw++clean

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,5 @@
 <div class="py-4 flex flex-row">
+  <!-- Current user profile name and picture -->
   <img [src]="currentUser.pictureUrl" class="w-8 h-8 rounded-full" />
   <div class="hidden pl-3 sm:flex items-center text-white">
     <p>{{ currentUser.name }}</p>
