--- a/src/app/components/video-title/video-title.component.html
+++ b/src/app/components/video-title/video-title.component.html
@@ -13,7 +13,7 @@
       class="border-2 border-solid border-border focus:border-title rounded-lg px-4 p-2 w-full"
     />
 
-    <!-- Save button to edit title -->
+    <!-- Save button to edit title (clickable on editing mode) -->
     <button
       *ngIf="isEditable"
       (click)="saveVideoTitle()"
