--- a/src/app/components/video-card/video-card.component.html
+++ b/src/app/components/video-card/video-card.component.html
@@ -1,1 +1,24 @@
-<p>video-card works!</p>
+<div class="group hover:bg-graybg flex flex-col">
+  <a [routerLink]="['/videos', video.id]">
+    <img src="{{ video.previewUrl }}" class="object-cover h-56 w-full" />
+    <div class="px-3 pt-2 pb-3">
+      <h1 class="truncate">{{ video.title }}</h1>
+      <div class="flex">
+        <div class="flex-1 text-caption">
+          {{ video.createdDate | date : "dd/mm/yy" }}
+        </div>
+        <div class="flex justify-end items-center">
+          <img
+            src="{{ video.author.pictureUrl }}"
+            class="w-6 h-6 rounded-full justify-center items-center"
+          />
+          <p
+            class="pl-2 text-sm capitalize text-caption justify-center items-center"
+          >
+            {{ video.author.name }}
+          </p>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
