--- a/src/app/components/video-reaction/video-reaction.component.html
+++ b/src/app/components/video-reaction/video-reaction.component.html
@@ -1,19 +1,26 @@
 <div
   *ngIf="reaction.type == 'snapshot'"
-  class="pl-4 pr-2 h-16 flex flex-row items-center hover:bg-graybg"
+  class="pl-4 pr-2 md:h-16 my-4 flex md:flex-row items-center hover:bg-graybg"
 >
-  <app-camera-icon fill="fill-caption" class=""></app-camera-icon>
-  <p class="px-5">{{ reaction.timeframe }}</p>
-  <p class="text-caption">{{ reaction.author.name }} created a snapshot</p>
-  <p class="pl-4 flex-1 text-caption">
-    ({{ reaction.createdDate | date : "dd/mm/yy" }} )
-  </p>
+  <div class="flex flex-1 items-center gap-3 md:gap-12">
+    <div class="md:flex gap-5 items-center">
+      <app-camera-icon fill="fill-caption" class=""></app-camera-icon>
+      <p>{{ reaction.timeframe | timeframeFormat }}</p>
+    </div>
+    <div class="flex">
+      <p class="text-caption">
+        {{ reaction.author.name }} created a snapshot ({{
+          reaction.createdDate | date : "dd/mm/yy"
+        }})
+      </p>
+    </div>
+  </div>
   <img [src]="reaction.imageUrl" class="w-24 h-14 rounded-md justify-end" />
 </div>
 
 <div
   *ngIf="reaction.type == 'star'"
-  class="px-4 h-16 flex flex-row items-center"
+  class="mx-4 h-16 flex flex-row items-center"
 >
   <app-star-icon fill="fill-caption" class=""></app-star-icon>
   <p class="px-5">{{ reaction.timeframe }}</p>
