--- a/src/app/components/video-reaction/video-reaction.component.html
+++ b/src/app/components/video-reaction/video-reaction.component.html
@@ -1,3 +1,4 @@
+<!-- Diplay snapshot reaction if type is snapshot -->
 <div
   *ngIf="reaction.type == 'snapshot'"
   class="pl-4 pr-2 md:h-16 my-4 flex md:flex-row items-center hover:bg-graybg"
@@ -18,12 +19,22 @@
   <img [src]="reaction.imageUrl" class="w-24 h-14 rounded-md justify-end" />
 </div>
 
+<!-- Diplay star reaction if type is star -->
 <div
   *ngIf="reaction.type == 'star'"
-  class="mx-4 h-16 flex flex-row items-center"
+  class="pl-4 pr-2 md:h-16 my-4 flex md:flex-row items-center hover:bg-graybg"
 >
-  <app-star-icon fill="fill-caption" class=""></app-star-icon>
-  <p class="px-5">{{ reaction.timeframe }}</p>
-  <p>{{ reaction.author.name }} created a snapshot</p>
-  <p class="flex-1">{{ reaction.postedDate }}</p>
+  <div class="flex flex-1 items-center gap-3 md:gap-12">
+    <div class="md:flex gap-5 items-center">
+      <app-star-icon fill="fill-caption" class=""></app-star-icon>
+      <p>{{ reaction.timeframe | timeframeFormat }}</p>
+    </div>
+    <div class="flex">
+      <p class="text-caption">
+        {{ reaction.author.name }} starred the video ({{
+          reaction.postedDate | date : "dd/mm/yy"
+        }})
+      </p>
+    </div>
+  </div>
 </div>
